[package]
name = "rust_tic_tac_toe"
version = "0.1.0"
edition = "2021"
description = "Классическая игра 'Крестики-нолики' на Rust + WebAssembly"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/rust-tic-tac-toe"
keywords = ["game", "tic-tac-toe", "rust", "wasm", "webassembly", "egui"]
categories = ["games", "web-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { version = "0.26.2", features = ["default_fonts"] }
egui = "0.26.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console"] }
