[package]
name = "rust_tic_tac_toe"
version = "0.1.0"
edition = "2021"
description = "Классическая игра 'Крестики-нолики' на Rust + WebAssembly"
authors = [""]
license = "MIT"
repository = "https://github.com/AlexanderRozov/RustTICTACTOE"
keywords = ["game", "tic-tac-toe", "rust", "wasm", "webassembly", "egui"]
categories = ["games", "web-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { version = "0.26.2", features = ["default_fonts"] }
egui = "0.26.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console"] }

# === ОПТИМИЗАЦИИ ДЛЯ РЕЛИЗНОЙ СБОРКИ ===

[profile.release]
opt-level = 3              # Максимальная оптимизация
lto = true                 # Link Time Optimization
codegen-units = 1          # Одна единица компиляции для лучшей оптимизации
panic = 'abort'            # Быстрое завершение при панике
strip = false              # Сохраняем символы для Windows (.pdb)

[profile.release.package.eframe]
opt-level = 3

[profile.release.package.egui]
opt-level = 3

# === ОПТИМИЗАЦИИ ДЛЯ WASM ===

[profile.release.package."*"]
opt-level = 3
